# glove

./: .gitignore  pyproject.toml
glove/: __main__.py  cli.py  config.py  util.py
tests/: test_util.py
