[tool.poetry]
name = "glove"
version = "0.1.0"
description = ""
authors = ["Cam Caswell <camcaswell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glove = 'glove.cli:cli'